maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:15: error: too many arguments for method droite: ()Unit
		droite(4)
                      ^